# toy_player

./: .gitignore  CMakeLists.txt  README  player.sln
player/: CMakeLists.txt  aac_encoder_mf.cc  aac_encoder_mf.h  audio_cap_enc_dec_play.cc  audio_cap_source_adv.cc  audio_cap_source_adv.h  audio_cap_source_mf.cc  audio_cap_source_mf.h  audio_cap_source_was.cc  audio_cap_source_was.h  audio_cap_source_wi.cc  audio_cap_source_wi.h  audio_play_mf.cpp  audio_play_mf.h  audio_play_sink_mf.cc  audio_play_sink_mf.h  audio_play_sink_was.cc  audio_play_sink_was.h  audio_player.cc  avc_decoder.cc  avc_decoder.h  avc_decoder_ffmpeg.cc  avc_decoder_mf.cc  avc_decoder_mf.h  avc_encoder_mf.cc  avc_encoder_mf.h  avc_frame_generator.cc  avc_frame_generator.h  avc_frame_generator_mf.cc  avc_frame_generator_mf.h  cap_play.cc  encode.c  encode.h  frame_allocator.cc  frame_allocator.h  image_allocator.cc  image_allocator.h  net_sim.cpp  opus_codec.cc  opus_codec.h  (+14 more)
ut_avc_decoder/: ut_avc_decoder.vcxproj  ut_avc_decoder.vcxproj.filters
ut_avc_frame_generator/: ut_avc_frame_generator.vcxproj  ut_avc_frame_generator.vcxproj.filters
ut_d2d_render/: ut_d2d_render.vcxproj  ut_d2d_render.vcxproj.filters
